tests/baselines/reference/multipleDefaultExports04.errors.txt
tests/cases/conformance/es6/modules/multipleDefaultExports04.ts(1,25): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/conformance/es6/modules/multipleDefaultExports04.ts(1,25): error TS2393: Duplicate function implementation.
tests/cases/conformance/es6/modules/multipleDefaultExports04.ts(4,25): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/conformance/es6/modules/multipleDefaultExports04.ts(4,25): error TS2393: Duplicate function implementation.


==== tests/cases/conformance/es6/modules/multipleDefaultExports04.ts (4 errors) ====
    export default function f() {
                            ~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~
!!! error TS2393: Duplicate function implementation.
    }
    
    export default function f() {
                            ~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~
!!! error TS2393: Duplicate function implementation.
    }